# coding-challenges-wc-tool-c

./: .gitignore  CMakeLists.txt  README.md
src/: ccwc.c
